RESOLVED FIXED 124768
[curl] Fix of SSL certificate chain storage
https://bugs.webkit.org/show_bug.cgi?id=124768
Summary [curl] Fix of SSL certificate chain storage
sipka
Reported 2013-11-22 04:46:06 PST
Change the certificates storage type into ListHashSet from HashSet to keep the chain order in each case. This ensures that there is no difference between the stored and the recieved certificate chain.
Attachments
proposed patch (3.59 KB, patch)
2013-11-22 04:49 PST, sipka
no flags
proposed patch (3.61 KB, patch)
2013-11-22 04:53 PST, sipka
no flags
sipka
Comment 1 2013-11-22 04:49:36 PST
Created attachment 217669 [details] proposed patch
WebKit Commit Bot
Comment 2 2013-11-22 04:51:35 PST
Attachment 217669 [details] did not pass style-queue: Failed to run "['Tools/Scripts/check-webkit-style', '--diff-files', u'Source/WebCore/ChangeLog', u'Source/WebCore/platform/network/curl/SSLHandle.cpp']" exit_code: 1 Source/WebCore/ChangeLog:1: ChangeLog entry has no bug number [changelog/bugnumber] [5] Total errors found: 1 in 2 files If any of these errors are false positives, please file a bug against check-webkit-style.
sipka
Comment 3 2013-11-22 04:53:47 PST
Created attachment 217670 [details] proposed patch Add missing bug url.
Brent Fulgham
Comment 4 2013-11-22 08:57:02 PST
Comment on attachment 217670 [details] proposed patch r=me
WebKit Commit Bot
Comment 5 2013-11-22 09:25:32 PST
Comment on attachment 217670 [details] proposed patch Clearing flags on attachment: 217670 Committed r159692: <http://trac.webkit.org/changeset/159692>
WebKit Commit Bot
Comment 6 2013-11-22 09:25:34 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.