[curl] Fix of SSL certificate chain storage https://bugs.webkit.org/show_bug.cgi?id=124768

Patch by Robert Sipka <sipka@inf.u-szeged.hu> on 2013-11-22
Reviewed by Brent Fulgham.

Change the certificates storage type into ListHashSet
from HashSet to keep the chain order in each case.
This ensures that there is no difference between the stored
and the recieved certificate chain.

* platform/network/curl/SSLHandle.cpp:
(WebCore::allowsAnyHTTPSCertificateHosts):
(WebCore::sslIgnoreHTTPSCertificate):
(WebCore::pemData):
(WebCore::certVerifyCallback):

Canonical link: https://commits.webkit.org/142946@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@159692 268f45cc-cd09-0410-ab3c-d52691b4dbfc